# llm-security-scanner

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FUNCTIONALITY.md  README.md  RUNBOOK.md  index.html  pyproject.toml  release-please-config.json  robots.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  llm-scan.yml  release-please.yml  release.yml  security.yml
.planning/: ROADMAP.md
backend/: chatbot_openai_app.py  landing_server.py
demo/: chatbot_openai_app.py  vulnerable_app.py
docker/: Dockerfile
docs/: FUNCTIONALITY.md  THREAT_MODEL.md  index.html
docs/cicd/: index.html
docs/cli-reference/: index.html
docs/getting-started/: index.html
evals/: ground_truth.yaml
examples/: README.md
frontend/: index.html
payloads/: llm01_prompt_injection.yaml  llm02_sensitive_info_disclosure.yaml  llm03_supply_chain.yaml  llm04_data_model_poisoning.yaml  llm05_improper_output_handling.yaml  llm06_excessive_agency.yaml  llm07_system_prompt_leakage.yaml  llm08_vector_embedding_weaknesses.yaml  llm09_misinformation.yaml  llm10_unbounded_consumption.yaml
static/: app.js  theme.css
tests/: conftest.py  test_baseline.py  test_cli.py  test_detectors.py  test_evals.py  test_judge.py  test_loader.py  test_models.py  test_observability.py  test_preflight.py  test_reconcile.py  test_reporters.py  test_sarif.py  test_scanner.py  test_suppressions.py  test_targets.py  test_trend.py
(+56 files in other folders)
